Next release
============

- ...

1.0a1 (2009-06-22)
==================

Features
--------

- A new ZCML directive was added named ``notfound``.  This ZCML
  directive can be used to name a view that should be invoked when the
  request can't otherwise be resolved to a view callable.  For example::

    <notfound 
        view="helloworld.views.notfound_view"/>

- A new ZCML directive was added named ``forbidden``.  This ZCML
  directive can be used to name a view that should be invoked when a
  view callable for a request is found, but cannot be invoked due to
  an authorization failure.  For example::

   <forbidden
       view="helloworld.views.forbidden_view"/>

- Allow views to be *optionally* defined as callables that accept only
  a request object, instead of both a context and a request (which
  still works, and always will).  The following types work as views in
  this style:

  - functions that accept a single argument ``request``, e.g.::

      def aview(request):
          pass

  - new and old-style classes that have an ``__init__`` method that
    accepts ``self, request``, e.g.::

      def View(object):
          __init__(self, request):
             pass

  - Arbitrary callables that have a ``__call__`` method that accepts
    ``self, request``, e.g.::

      def AView(object):
          def __call__(self, request):
             pass
      view = AView()

  This likely should have been the calling convention all along, as
  the request has ``context`` as an attribute already, and with views
  called as a result of URL dispatch, having the context in the
  arguments is not very useful.  C'est la vie.

- Cache the absolute path in the caller's package globals within
  ``repoze.bfg.path`` to get rid of repeated (expensive) calls to
  os.path.abspath.

- Add ``reissue_time`` and ``timeout`` parameters to
  ``repoze.bfg.authentication.AuthTktAuthenticationPolicy``
  constructor.  If these are passed, cookies will be reset every so